<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.contacts.activities.CreateEditContactActivity"
    tools:showIn="@layout/activity_create_edit_contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registration_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/select_image"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:enabled="false"/>

                <ImageView
                    android:id="@+id/img_select"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/ic_camera_black_24dp"
                    android:tint="@color/colorPrimary"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/company"
                android:inputType="text"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:id="@+id/username_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/phone_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/phone_home"
                android:inputType="phone"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/phone_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/phone_work"
                android:inputType="phone"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/birthday"
                    android:inputType="text"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:enabled="false"/>

                <ImageView
                    android:id="@+id/img_birthday"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/ic_today_black_24dp"
                    android:tint="@color/colorPrimary"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/website"
                android:inputType="text"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:minLines="3"
                android:maxLines="5"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:text="Mark as favorite"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/img_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/ic_not_favorite"
                    android:tint="@color/colorPrimary"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <Button
                android:id="@+id/add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
